--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.3.1",
-    "sass": "^1.43.3"
+    "sass": "^1.43.3",
+    "socket.io": "^4.3.1",
+    "socket.io-client": "^4.3.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
